sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut=0
  var fin =getNombreValeurs()-2
  do{
    var inversement=false
    for (i<-0 to fin){
    	if (plusPetit(i+1,i)){
        echange(i,i+1)
        inversement=true
      }
    }
    fin=fin-1
     for (i<- fin to debut by -1){
      if(plusPetit(i+1,i)){
        echange(i,i+1)
        inversement=true
      }
    }
    debut=debut+1
  }while(inversement)
}